ROL-1110: Compact display for entry management page to avoid layout problems
git-svn-id: https://svn.apache.org/repos/asf/incubator/roller/trunk@395407 13f79535-47bb-0310-9956-ffa450edef68

--- a/web/theme/blue/colors.css
+++ b/web/theme/blue/colors.css
@@ -142,3 +142,22 @@ span.mm_weblog_name {
 td.mm_table_actions {
     background: #fff4d4;
 }
+
+
+/* RTE editor  */
+
+.rteBack tbody tr td, .rteBack tr td, .rteDiv, .rteBack .rteImageLowered, .rteImage:active, .rteImageRaised, .rteImage:hover, .rteImageSm, .rteImage {
+	background: #e3e3e3;
+}
+.rteImage {
+	border: 1px solid #bcc5cd; 
+}
+.rteImageSm {
+	border: 1px solid #bcc5cd; 
+}
+.rteDiv {
+    border: 1px solid #bcc5cd;
+}
+
+
+
